Minor fix to data_prefix when empty.

--- a/extra/Community Sampling.ipynb
+++ b/extra/Community Sampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 158,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 162,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 164,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 165,
    "metadata": {
     "collapsed": true
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 166,
    "metadata": {
     "collapsed": true
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 169,
    "metadata": {
     "collapsed": true
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 170,
    "metadata": {
     "collapsed": true
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -561,6 +561,7 @@
     "        grs=[growth_param[x] for x in c]\n",
     "\n",
     "        wd='comm_'+str(topname)+str(i)\n",
+    "        docker_fd=join(docker_td,wd)\n",
     "        fd=join(td,wd)\n",
     "        \n",
     "        # create dirs\n",
@@ -572,18 +573,18 @@
     "                    makedirs(d)\n",
     "        \n",
     "        chdir(wd)\n",
-    "        lconf=local_conf(td,mapper)\n",
-    "        conf=local_conf(docker_td,mapper)\n",
+    "        lconf=local_conf(fd,mapper)\n",
+    "        conf=local_conf(docker_fd,mapper)\n",
     "        save_config(lconf,conf)\n",
     "        \n",
-    "        args0=['/home/Programs/PTR-Pipeline/ptr_pipeline.py','-c',join(docker_td,'project.conf'),'-e','hedani@chalmers.se']\n",
+    "        args0=['/home/Programs/PTR-Pipeline/ptr_pipeline.py','-c',join(conf['node_path'],'project.conf'),'-e','hedani@chalmers.se']\n",
     "        \n",
     "        if 'f' in exec_string:\n",
     "            f = open(\"acc\", \"w\")\n",
     "            f.write(\"\\n\".join(accs))\n",
     "            f.close()\n",
     "\n",
-    "            print create_mount_run('centos/hedani',td,args0+['fetch-references','-s',join(docker_td,wd,'acc')])\n",
+    "            print create_mount_run('centos/hedani',td,args0+['fetch-references','-s',join(conf['node_path'],'acc')])\n",
     "\n",
     "        if 's' in exec_string:\n",
     "            # create community and sample\n",
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 174,
    "metadata": {
     "collapsed": true
    },
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 175,
    "metadata": {
     "collapsed": true
    },
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -726,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
@@ -734,10 +735,10 @@
     {
      "data": {
       "text/plain": [
-       "'DoriC\\ncomm_00\\nproject.conf\\n'"
+       "'DoriC\\nReferences\\ncomm_00\\nproject.conf\\n'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
