Add search limit to test command

--- a/menace/extra/Community Sampling.ipynb
+++ b/menace/extra/Community Sampling.ipynb
@@ -10980,6 +10980,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -10995,7 +10996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
